[gd_scene load_steps=25 format=2]

[ext_resource path="res://pieces/hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://fsm/fsm.gd" type="Script" id=2]
[ext_resource path="res://fsm/states/patrol.gd" type="Script" id=3]
[ext_resource path="res://fsm/states/charge.gd" type="Script" id=4]
[ext_resource path="res://pieces/entity_detector.tscn" type="PackedScene" id=5]
[ext_resource path="res://pieces/walledge_detector.tscn" type="PackedScene" id=6]
[ext_resource path="res://entities/enemies/sawhead.gd" type="Script" id=7]
[ext_resource path="res://entities/enemies/sawhead.png" type="Texture" id=8]
[ext_resource path="res://fsm/states/charge_conditional.gd" type="Script" id=9]
[ext_resource path="res://fsm/states/state.gd" type="Script" id=10]
[ext_resource path="res://entities/enemies/data/sawhead.tres" type="Resource" id=11]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8, 8 )

[sub_resource type="CircleShape2D" id=12]
radius = 56.0

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 40, 48 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 64, 62 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 8, 48 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("flippable/sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 48, -56 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("flippable/sawbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -56 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("flippable/sawbox:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("flippable/sprite:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "attacc0"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.7, 2.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 11, 12, 11, 12, 13, 14, 15, 8, 9, 8, 9, 10, 11, 12, 11, 12, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=9]
resource_name = "attacc1"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("flippable/sawbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 64, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("flippable/sawbox:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 89.9999 ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("flippable/sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 48, -56 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "postattacc0"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("flippable/sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 64, -56 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("flippable/sawbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 64, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("flippable/sawbox:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 89.9999 ]
}

[sub_resource type="Animation" id=10]
resource_name = "postattacc1"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31, 32, 33, 34, 35 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("flippable/sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 128, -56 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "reposition"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("flippable/sawbox:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 128, -56 ), Vector2( 0, -56 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("flippable/sawbox:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("flippable/sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 48, -56 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "unattacc"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("flippable/sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 48, -56 ), Vector2( 74, -15 ), Vector2( 54, -55 ), Vector2( 49, -58 ), Vector2( 48, -56 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("flippable/sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0.0, 39.188, 6.11144, 1.47286, 0.0 ]
}

[node name="sawhead" type="KinematicBody2D"]
script = ExtResource( 7 )
flip_path = NodePath("flippable")
max_hp = 1.0
enemy_data = ExtResource( 11 )

[node name="hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="flippable" type="Node2D" parent="."]
use_parent_material = true

[node name="hurtbox0" parent="flippable" instance=ExtResource( 1 )]
position = Vector2( 16, 0 )
knockback = Vector2( 100, -45 )

[node name="hitbox" type="CollisionPolygon2D" parent="flippable/hurtbox0"]
visible = false
polygon = PoolVector2Array( 8, -120, 48, -120, 80, -96, 104, -64, 104, -8, 32, -8, 32, -24, 16, -40, 24, -80 )

[node name="hurtbox1" parent="flippable" instance=ExtResource( 1 )]
position = Vector2( 128, -64 )
radial_knockback = 600.0

[node name="hitbox" type="CollisionShape2D" parent="flippable/hurtbox1"]
visible = false
shape = SubResource( 12 )

[node name="walledge_detector" parent="flippable" instance=ExtResource( 6 )]
visible = false
position = Vector2( 12, 8 )

[node name="entity_detector" parent="flippable" instance=ExtResource( 5 )]
position = Vector2( 16, 0 )

[node name="hitbox" type="CollisionShape2D" parent="flippable/entity_detector"]
visible = false
position = Vector2( 32, -40 )
shape = SubResource( 11 )

[node name="sprite" type="Sprite" parent="flippable"]
use_parent_material = true
position = Vector2( 48, -56 )
texture = ExtResource( 8 )
hframes = 8
vframes = 5

[node name="wall_detector" type="Area2D" parent="flippable"]
position = Vector2( 72, -56 )
collision_layer = 8
collision_mask = 4

[node name="hitbox" type="CollisionShape2D" parent="flippable/wall_detector"]
visible = false
shape = SubResource( 13 )

[node name="sawbox" parent="flippable" instance=ExtResource( 1 )]
position = Vector2( 0, -56 )
hit_rate = 0.5
radial_knockback = 250.0
active = true

[node name="hitbox" type="CollisionShape2D" parent="flippable/sawbox"]
visible = false
shape = SubResource( 14 )

[node name="animator" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 1 )
anims/attacc0 = SubResource( 2 )
anims/attacc1 = SubResource( 9 )
anims/idle = SubResource( 7 )
anims/postattacc0 = SubResource( 4 )
anims/postattacc1 = SubResource( 10 )
anims/run = SubResource( 5 )
anims/unattacc = SubResource( 15 )

[node name="fsm" type="Node" parent="."]
script = ExtResource( 2 )
animator_path = NodePath("../animator")

[node name="patrol" type="Node" parent="fsm"]
script = ExtResource( 3 )

[node name="attacc0" type="Node" parent="fsm"]
script = ExtResource( 9 )
animation = "attacc0"
auto_proceed = "attacc1"
cancel_state = "patrol"
recover_animation = "postattacc0"

[node name="attacc1" type="Node" parent="fsm"]
script = ExtResource( 4 )
animation = "attacc1"
auto_proceed = "patrol"
recover_animation = "postattacc1"

[node name="unattacc" type="Node" parent="fsm"]
script = ExtResource( 10 )
animation = "unattacc"
auto_proceed = "patrol"

[connection signal="updated" from="flippable/walledge_detector" to="fsm/patrol" method="_on_walledge_detector_updated"]
[connection signal="activated" from="flippable/entity_detector" to="." method="flop"]
[connection signal="activated" from="fsm/attacc0" to="." method="_on_attacc0_activated"]
[connection signal="activated" from="fsm/attacc1" to="." method="_on_attacc1_activated"]
[connection signal="exited" from="fsm/attacc1" to="." method="_on_attacc1_exited"]
